# jni-mvn

./: .gitignore  README.md  pom.xml  step.md
Backend/: pom.xml
Backend/src/main/java/com/example/backend/: MathController.java
Backend/src/test/java/com/example/backend/: BackendApplicationTests.java
Foundation/: CMakeLists.txt
Foundation/include/: foundation_math.hpp
Foundation/src/: foundation_math.cpp
Foundation/swig/: foundation.i
JniMvnLib/CloudLogger/: pom.xml
JniMvnLib/CloudLogger/native/: CMakeLists.txt
JniMvnLib/CloudLogger/native/include/: cloud_logger_bridge.hpp
JniMvnLib/CloudLogger/native/src/: cloud_logger_bridge.cpp
JniMvnLib/CloudLogger/native/swig/: cloud_logger.i
JniMvnLib/CloudLogger/src/main/java/com/example/cloudlogger/: CloudLoggerApplicationContextInitializer.java  CloudLoggerAutoConfiguration.java  CloudLoggerNativeLoader.java  DefaultCloudLogger.java  FoundationNativeLoader.java
JniMvnLib/CloudLogger/src/main/resources/native/include/: cloud_logger_bridge.hpp
scripts/: extract-cloudlogger-headers.sh
